--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,12 @@ Temporary Items
 *.ide
 Source/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 Source/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+Source/bin/Debug/DatabaseCompare.exe
+Source/bin/Debug/DatabaseCompare.pdb
+Source/bin/Debug/Microsoft.SqlServer.ServiceBrokerEnum.dll
+Source/bin/Debug/Microsoft.SqlServer.Management.Sdk.Sfc.dll
+Source/bin/Debug/Microsoft.SqlServer.ConnectionInfo.dll
+Source/bin/Debug/Microsoft.SqlServer.Smo.dll
+Source/bin/Debug/Microsoft.SqlServer.SqlEnum.dll
+Source/bin/Debug/DatabaseCompare.exe.config
+Source/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
