--- a/Source/DatabaseCompare.csproj
+++ b/Source/DatabaseCompare.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess.cs" />
+    <Compile Include="DataCompare.cs" />
     <Compile Include="DataObjects.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
@@ -57,6 +59,7 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="JobType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchemaCompare.cs" />
