--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,21 @@ Source/bin/Debug/Microsoft.SqlServer.Smo.dll
 Source/bin/Debug/Microsoft.SqlServer.SqlEnum.dll
 Source/bin/Debug/DatabaseCompare.exe.config
 Source/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+Source/.vs/DatabaseCompare/DesignTimeBuild/.dtbcache
+*.ide-shm
+*.ide-wal
+Source/bin/Debug/DatabaseCommon.dll
+*.pdb
+*.ide-shm
+Source/.vs/DatabaseCompare/v15/Server/sqlite3/storage.ide-wal
+Source/bin/Debug/Microsoft.SqlServer.Diagnostics.STrace.dll
+Source/bin/Debug/Microsoft.SqlServer.Dmf.Common.dll
+Source/bin/Debug/Microsoft.SqlServer.SqlClrProvider.dll
+Source/bin/Debug/System.Net.Http.xml
+Source/bin/Debug/System.Net.Http.dll
+*.CopyComplete
+*.cache
+Source/obj/Debug/DatabaseCompare.csproj.FileListAbsolute.txt
+Source/obj/Debug/DatabaseCompare.exe
+Source/obj/Debug/DatabaseCompare.frmDatabaseCompare.resources
+Source/obj/Debug/DatabaseCompare.Properties.Resources.resources
